width and vertical alignment issue of images

--- a/static/shared/css/listing.css
+++ b/static/shared/css/listing.css
@@ -1076,3 +1076,28 @@ body {
 .a-clean:hover, .a-clean:visited, .a-clean:focus {
   text-decoration: none;
 }
+
+.align-txtimg {
+  display: table;
+}
+
+.align-txtimg span {
+  display: table-cell;
+  vertical-align: middle;
+}
+
+.align-txtimg span img {
+  margin-top: -5px;
+}
+
+.dash-tag {
+  background-color: #ccc;
+  border: 1px dashed #787878;
+  font-size: 14px;
+  margin: 0 5px;
+  padding: 6px 5px;
+}
+
+.dash-tag strong {
+  font-weight: 700;
+}
